<resources>
    <string name="app_name">Stopwatch</string>

    <string name="tv_minute">00</string>
    <string name="tv_second">:00</string>
    <string name="tv_millisecond">,00</string>

    <string name="btn_start">시작</string>
    <string name="btn_restart">초기화</string>
    <string name="btn_pause">일시정지</string>

    <string name="btn_start_eng">Start</string>
    <string name="btn_restart_eng">Clear</string>
    <string name="btn_pause_eng">Pause</string>
</resources>